--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.1.0",
     "react-parallax-tilt": "^1.7.42",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.1.0",
     "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4"
   },
